syntax = "proto3";

option optimize_for = LITE_RUNTIME;
option java_package = "bruhcollective.itaysonlab.jetisteam.proto";
option java_multiple_files = true;

message SessionData {
    uint64 steam_id = 1;
    string username = 2;
    string access_token = 3;
    string refresh_token = 4;
}

message GuardData {
    bytes shared_secret = 1;
    fixed64 serial_number = 2;
    string revocation_code = 3;
    string otpUri = 4;
    string account_name = 5;
    string token_gid = 6;
    bytes identity_secret = 7;
    bytes secret_1 = 8;
}